--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: RMSDp
 Type: Package
-Title: What the Package Does (Title Case)
+Title: Modified Stahel-Donoho (MSD) Estimators for Outlier Detection
 Version: 0.1.0
 Author: Who wrote it
 Maintainer: The package maintainer <yourself@somewhere.net>
