--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,15 +1,14 @@
 Package: RMSDp
 Type: Package
-Title: Modified Stahel-Donoho (MSD) Estimators for Outlier Detection
+Title: Paralleled Version of Modified Stahel-Donoho (MSD) Estimators for Outlier Detection
 Version: 0.1.0
-Author: Who wrote it
-Maintainer: The package maintainer <yourself@somewhere.net>
+Depends: stats
+Imports: parallel, doParallel, foreach
+Authors@R: person(given="Kazumi", family="Wada", role=c("aut", "cre"), email = "kazwd2008@gmail.com", comment=c(ORCID="0000-0002-9578-1588"))
+Maintainer: WADA Kazumi <kazwd2008@gmail.com>
 Description: More about what it does (maybe more than one line)
     Use four spaces when indenting paragraphs within the Description.
-License: What license is it under?
+License: GPL (>= 3)
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.2.1
-Suggests: 
-    testthat (>= 3.0.0)
-Config/testthat/edition: 3
