--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,18 +1,14 @@
 Package: RMSDp
 Type: Package
-Title: Parallel
- Version of Modified Stahel-Donoho (MSD) Estimators for Outlier Detection
+Title: Refined Modified Stahel-Donoho (MSD) Estimators for Outlier Detection (Parallel Version)
 Version: 0.1.0
 Depends: stats
 Imports: parallel, doParallel, foreach
 Authors@R: person(given="Kazumi", family="Wada", role=c("aut", "cre"), email = "kazwd2008@gmail.com", comment=c(ORCID="0000-0002-9578-1588"))
 Maintainer: WADA Kazumi <kazwd2008@gmail.com>
 Description: 
-
-    One function of a paralleled algorithm for multivariate outlier detection named modified Stahel-Donoho estimators is contained.  The function is for elliptically distributed datasets.  Outliers are recognized based on Mahalanobis distance. 
-
-    The function is for higher dimensional datasets which cannot be handled by a single core function included in RMSD,  See Wada and Tsubaki (2013) <DOI: 10.1109/CLOUDCOM-ASIA.2013.86> for the detail of the algorithm. 
-
+    A parallel function for multivariate outlier detection named modified Stahel-Donoho estimators is contained.  The function is for elliptically distributed datasets and recognizes outliers based on Mahalanobis distance. 
+    The function is for higher dimensional datasets that cannot be handled by a single core function included in RMSD.  See Wada and Tsubaki (2013) <DOI: 10.1109/CLOUDCOM-ASIA.2013.86> for the detail of the algorithm. 
 License: GPL (>= 3)
 Encoding: UTF-8
 LazyData: true
