--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -12,3 +12,6 @@ License: GPL (>= 3)
 Encoding: UTF-8
 Language: en-US
 RoxygenNote: 7.2.1
+Suggests: 
+    testthat (>= 3.0.0)
+Config/testthat/edition: 3
