--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -12,8 +12,8 @@ Imports:
     foreach
 Authors@R: person(given="Kazumi", family="Wada", role=c("aut", "cre"), email = "kazwd2008@gmail.com", comment=c(ORCID = "0000-0002-9578-1588"))
 Description: 
-    A parallel function for multivariate outlier detection named modified Stahel-Donoho estimators is contained.  The function is for elliptically distributed datasets and recognizes outliers based on Mahalanobis distance. 
-    The function is for higher dimensional datasets that cannot be handled by a single core function included in RMSD.  See Wada and Tsubaki (2013) <doi:10.1109/CLOUDCOM-ASIA.2013.86> for the detail of the algorithm. 
+    This package containes a parallel function for multivariate outlier detection named modified Stahel-Donoho estimators.  The function is for elliptically distributed datasets and recognizes outliers based on Mahalanobis distance. 
+    The function 'RMSDp' is for higher dimensional datasets that cannot be handled by a single core function 'RMSD' included in 'RMSD' package.  See Wada and Tsubaki (2013) <doi:10.1109/CLOUDCOM-ASIA.2013.86> for the detail of the algorithm. 
 License: GPL (>= 3)
 Encoding: UTF-8
 Language: en-US
